[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/textures/SpaceInvaders.png" type="Texture" id=1]
[ext_resource path="res://enemies/enemy.gd" type="Script" id=2]
[ext_resource path="res://laser/laser.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3, 4, 4.5, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -26, 0 ), Vector2( -26, 0 ), Vector2( -26, 0 ), Vector2( 0, 0 ), Vector2( 26, 0 ), Vector2( 26, 0 ), Vector2( 26, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.5, 4, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "fire"
}, {
"args": [  ],
"method": "fire"
}, {
"args": [  ],
"method": "fire"
}, {
"args": [  ],
"method": "fire"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "respawn"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionPolygon2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "spawn", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "spawn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_move"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Enemy" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )
laser_scene = ExtResource( 3 )
laser_collision_layer = 8

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 64, 0, 16, 16 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -5, 5, 0, -4, 5, 5 )
disabled = true

[node name="FirePosition" type="Position2D" parent="Area2D"]
position = Vector2( 0, -6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
anims/RESET = SubResource( 1 )
anims/move = SubResource( 2 )
anims/respawn = SubResource( 4 )
anims/spawn = SubResource( 3 )

[node name="AnimationTimer" type="Timer" parent="Area2D"]
one_shot = true

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Area2D/AnimationTimer" to="Area2D" method="_on_AnimationTimer_timeout"]
